# librarysystem

./: CMakeLists.txt  Start.pro  Start.pro.user.8e1384f  Start.pro.user.fc88af2  cpp_re.cpp  cpp_re.h  forget.cpp  forget.h  forget.ui  home.cpp  home.h  home.ui  library.cpp  library.h  library.ui  main.cpp  manage.cpp  manage.h  manage.ui  newbook.cpp  newbook.h  newbook.ui  newmanage.cpp  newmanage.h  newmanage.ui  re_account.cpp  re_account.h  re_account.ui  re_admin.cpp  re_admin.h  re_admin.ui  re_book.cpp  re_book.h  re_book.ui  register_qt.cpp  register_qt.h  register_qt.ui  rent.cpp  rent.h  rent.ui
demo/: 001.data  369.data  book.data  ladmin.data  reader.data
project/librarysystem/: Book.cpp  Book.h  Bookrecord.cpp  Bookrecord.h  CMakeLists.txt  Chinese.cpp  Chinese.h  Date.cpp  Date.h  File.cpp  File.h  Ladmin.cpp  Ladmin.h  Manager.cpp  Manager.h  Menu.h  Reader.cpp  Reader.h  User.cpp  User.h  main.cpp
res/: res.qrc
